fix: scroll container too large

--- a/evently/src/app/pages/dashboard/whats-on/whats-on/event-dialog/event-dialog.component.scss
+++ b/evently/src/app/pages/dashboard/whats-on/whats-on/event-dialog/event-dialog.component.scss
@@ -8,6 +8,7 @@
 .event-scroll-container {
   padding-bottom: 100px;
   max-height: calc(100vh - 700px);
+  min-height: 150px;
   overflow-y: auto;
   overflow-x: hidden;
 
@@ -45,7 +46,7 @@
 }
 
 .img-container {
-  max-height: 300px;
+  max-height: 30vh;
   max-width: 90vw;
   overflow: hidden;
 }
@@ -90,7 +91,7 @@
 }
 
 .info {
-  padding: 10px 100px;
+  padding: 10px 70px;
   display: flex;
   justify-content: space-between;
 }
